Update NPM dependencies to fix depending on vulnerable versions

--- a/package.json
+++ b/package.json
@@ -40,17 +40,17 @@
     "url": "git://github.com/mapbox/node-sqlite3.git"
   },
   "dependencies": {
-    "node-addon-api": "^4.2.0",
-    "@mapbox/node-pre-gyp": "^1.0.0"
+    "@mapbox/node-pre-gyp": "^1.0.0",
+    "node-addon-api": "^4.2.0"
   },
   "devDependencies": {
     "@mapbox/cloudfriend": "^1.9.0",
     "aws-sdk": "2.x",
     "eslint": "^7.32.0",
-    "mocha": "^5.2.0"
+    "mocha": "^9.2.0"
   },
   "peerDependencies": {
-    "node-gyp": "7.x"
+    "node-gyp": "8.x"
   },
   "peerDependenciesMeta": {
     "node-gyp": {
@@ -58,7 +58,7 @@
     }
   },
   "optionalDependencies": {
-    "node-gyp": "7.x"
+    "node-gyp": "8.x"
   },
   "scripts": {
     "install": "node-pre-gyp install --fallback-to-build",
